--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "LocalDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Education\\handins\\asp-handin\\ASPNET_MVC\\Infrastructure\\Data\\ASP-Database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=True" }
 }
