Populating and strul

--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Services\" />
+    <Folder Include="Helpers\Middlewares\" />
   </ItemGroup>
 
   <ItemGroup>
