--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "LocalDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Education\\handins\\asp-handin\\ASPNET_MVC\\Infrastructure\\Data\\ASP-Database.mdf;Integrated Security=True;Connect Timeout=30" }
+  "ConnectionStrings": { "LocalDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\asven\\OneDrive\\Dokument\\ASP-Database.mdf;Integrated Security=True;Connect Timeout=30" }
 }
