Courses html and scss

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -8,10 +8,16 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\css\scss\sections\_allCourses.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\scss\sections\_allCourses.scss" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="wwwroot\css\scss\sections\_allCourses.scss" />
   </ItemGroup>
 
   <ItemGroup>
